--- a/app/blocks/footer/footer.jade
+++ b/app/blocks/footer/footer.jade
@@ -1,11 +1,12 @@
 include ../container/container
 
 mixin footer()
-  +container()
     +b.footer&attributes(attributes)
-      +e.copyright
-        small Copyright &copy;
-      +e.author 
-        small powered by Puer
-          +icon('loco', 45, 41).loco
-        
+      +container()
+        .footer__wrap
+          .footer__copyright
+            small Copyright &copy;
+          .footer__author 
+            small powered by Puer
+              +icon('loco', 45, 41).loco
+            
