--- a/app/blocks/home/home.css
+++ b/app/blocks/home/home.css
@@ -7,6 +7,12 @@
   padding-left: 6.25%;
 }
 
+.home__wrap
+{
+  flex-direction: column;
+  width: 100%;
+}
+
 .home__heading
 {
   lost-column: 1/2 0 0;
@@ -24,4 +30,9 @@
 .lion
 {
   width: 81.25%;
+}
+
+#home
+{
+  background-color: seagreen;
 }
