--- a/app/styles/helpers/typography.css
+++ b/app/styles/helpers/typography.css
@@ -30,7 +30,7 @@ h4
 h1
 {
   margin-top: 0;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: Roboto Condensed, sans-serif;
   font-size: responsive 2rem 6.854rem;
   font-range: 20rem 90rem;
 }
