--- a/app/blocks/logo/logo.css
+++ b/app/blocks/logo/logo.css
@@ -2,6 +2,9 @@
 {
   position: relative;
   width: 100%;
+  height: auto;
+  background-color: blue;
+  transition: all 2s ease;
 }
 
 .logo__icon
@@ -21,21 +24,55 @@
   z-index: 1;
   top: 0;
   left: 0;
-  transition: all .5s ease-in-out .3s;
-  opacity: 0;
+  animation-name: hideLogo;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+  border: 1px solid #000;
 }
 
 @media (--m)
 {
-  .logo__icon
+  .logo__icon--front
   {
-    width: 4.375rem;
+    animation-name: scaleLogo;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
   }
 
   .logo__icon--back
   {
+    animation-name: scaleLogo, showLogo;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s, 1s;
+  }
+}
+
+@keyframes scaleLogo
+{
+  100%
+  {
+    /*transform: scale(1.4);*/
+  }
+}
+
+@keyframes showLogo
+{
+  100%
+  {
     transform: translateX(4.375rem);
-    /*transform-origin: bottom;*/
     opacity: 1;
+  }
+}
+
+@keyframes hideLogo
+{
+  100%
+  {
+    transform: translateX(0);
+    opacity: 0;
   }
 }
