--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -32,7 +32,7 @@ mixin index()
             +social(getData('social'))
           +e.info
             +info()
-              h2 Inin
+              +e('h2').title Inin
               h3.light Front-end developer
               p I'm a front-end developer based in Moscow. I produce stylish and high-quality digital projects.
               p I'm available for freelance works.
