--- a/app/styles/helpers/typography.css
+++ b/app/styles/helpers/typography.css
@@ -7,8 +7,8 @@ body
 {
   color: var(--mainBlack);
   background-color: white;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-family: 'Gidole', sans-serif;
+  font-weight: normal;
   line-height: 1.45;
 }
 
@@ -30,7 +30,6 @@ h4
 h1
 {
   margin-top: 0;
-  font-family: Roboto Condensed, sans-serif;
   font-size: responsive 2rem 6.854rem;
   font-range: 20rem 90rem;
 }
@@ -68,7 +67,7 @@ input,
 label,
 textarea
 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Gidole', sans-serif;
   font-size: responsive 1rem 1.618rem;
   font-range: 20rem 90rem;
   line-height: 1.45;
