--- a/app/blocks/header/header.css
+++ b/app/blocks/header/header.css
@@ -4,18 +4,28 @@
   justify-content: space-between;
   width: 100%;
   height: 3.125rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 5;
+  transition: all .2s ease;
 }
 
 .header__logo
 {
-  flex-grow: 0;
   align-items: center;
+  flex-grow: 0;
 }
 
 .header__menu
 {
   justify-content: flex-end;
   flex-grow: 1;
+}
+
+.fixed
+{
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 @media (--m)
