--- a/app/blocks/header/header.css
+++ b/app/blocks/header/header.css
@@ -1,12 +1,11 @@
 .header
 {
+  z-index: 5;
   display: flex;
   justify-content: space-between;
   width: 100%;
   height: 3.125rem;
-  background-color: rgba(255, 255, 255, 0.8);
-  z-index: 5;
-  transition: all .2s ease;
+  transition: all .2s linear;
 }
 
 .header__logo
@@ -26,6 +25,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  background-color: rgba(255, 255, 255, .9);
 }
 
 @media (--m)
@@ -41,5 +41,10 @@
   {
     flex-grow: 0;
     flex-basis: 30rem;
+  }
+
+  .fixed
+  {
+    margin-top: 0;
   }
 }
