--- a/app/blocks/menu/menu.css
+++ b/app/blocks/menu/menu.css
@@ -40,7 +40,33 @@
 
 .menu__item--active
 {
-  background-color: coral;
+  position: relative;
+  transition: color .3s;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.menu__item--active::before
+{
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  content: '';
+  transition: transform .3s ease-out;
+  transform: scaleY(1);
+  transform-origin: 50%;
+  background: var(--mainBlack);
+}
+
+.menu__item--active .menu__icon
+{
+  transform: scale(1.1);
+  fill: white;
 }
 
 @media (--s)
@@ -66,7 +92,8 @@
     text-indent: 0;
   }
 
-  .hvr-under
+  .hvr-under,
+  .menu__item--active
   {
     position: relative;
     overflow: hidden;
@@ -77,7 +104,8 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
-  .hvr-under::before
+  .hvr-under::before,
+  .menu__item--active::before
   {
     position: absolute;
     z-index: -1;
@@ -94,6 +122,11 @@
   .hvr-under:hover::before,
   .hvr-under:focus::before,
   .hvr-under:active::before
+  {
+    transform: translateY(0) scaleX(.8);
+  }
+
+  .menu__item--active::before
   {
     transform: translateY(0) scaleX(.8);
   }
