--- a/app/blocks/gradient/gradient.css
+++ b/app/blocks/gradient/gradient.css
@@ -1,4 +1,4 @@
 .gradient
 {
-  background-image: linear-gradient(to left, #4b1248, #f0c27b);
+  background-image: linear-gradient(to left, var(--gradient1), var(--gradient2));
 }
