--- a/app/blocks/portfolio/portfolio.css
+++ b/app/blocks/portfolio/portfolio.css
@@ -13,12 +13,11 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
-  border: 1px solid var(--gold);
 }
 
 .portfolio__image
 {
-  transition: all 3s linear;
+  transition: transform 4s linear;
 }
 
 .portfolio__description
@@ -38,20 +37,23 @@
 {
   display: flex;
   justify-content: center;
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 0;
+  padding-right: .625rem; /* 10/16 */
+  padding-left: .625rem; /* 10/16 */
   transition: all .5s ease;
   text-align: center;
   color: var(--gold);
-  background-color: rgba(23, 23, 23, .7);
+  background-color: color(#000 alpha(65%));
 }
 
 .portfolio__description h3
 {
   align-items: flex-end;
   padding-bottom: .3em;
+  font-weight: bold;
 }
 
 .portfolio__description p
@@ -64,6 +66,22 @@
   .portfolio__item
   {
     lost-column: 1/3 3;
+  }
+
+  .portfolio__item:nth-child(even) .portfolio__description h3,
+  .portfolio__item:nth-child(even) .portfolio__description p
+  {
+    color: var(--gold);
+    background-color: color(var(--gradient1) alpha(65%));
+    text-shadow: .125rem .125rem 0 #00000980; /* 2/16, 2/16 */
+  }
+
+  .portfolio__item:nth-child(odd) .portfolio__description h3,
+  .portfolio__item:nth-child(odd) .portfolio__description p
+  {
+    color: var(--mainBlack);
+    background-color: color(var(--gradient2) alpha(65%));
+    text-shadow: .125rem .125rem 0 #fffff980; /* 2/16, 2/16 */
   }
 }
 
