--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -17,13 +17,13 @@ mixin index()
       +section()#home
         +home().gradient
           +container()
-            .homo__wrap
+            .home__wrap
               .home__heading
                 +heading() Gorgeous Design For Humans
                 +subheading() 
                   | Design is not just what it looks like and feels like. Design is how it works.
               .home__lion
-                +icon('lion', 130, 167.251).lion
+                +icon('lion', 350, 456).lion
           +triangle().triangle__bottom.js-triangle
       +section()#about
         +about()
