--- a/app/blocks/home/home.css
+++ b/app/blocks/home/home.css
@@ -9,7 +9,7 @@
 
 .home__wrap
 {
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
 }
 
@@ -18,6 +18,7 @@
   lost-column: 1/2 0 0;
 
   flex-direction: column;
+  border: 1px solid blue;
 }
 
 .home__lion
@@ -25,9 +26,13 @@
   lost-column: 1/2 0 0;
 
   justify-content: flex-end;
+  border: 1px solid red;
 }
 
 .lion
 {
-  width: 81.25%;
+  /*width: 81.25%;*/
+  width: 300px;
+  border: 1px solid green;
+  fill: pink;
 }
