--- a/app/blocks/skills/skills.css
+++ b/app/blocks/skills/skills.css
@@ -24,6 +24,7 @@
   display: flex;
   align-items: center;
   margin: 0 .3rem;
+  margin-bottom: var(--vr);
   cursor: pointer;
   font-size: responsive 1rem 1.618rem;
   font-range: 20rem 90rem;
@@ -39,16 +40,18 @@
   margin-right: .625rem;
   content: '';
   vertical-align: middle;
-  background-image: svg('check-empty', '[fill]: var(--mainBlack)');
+  background-image: svg-load(check-empty.svg, fill: #222);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
 }
 
-.checkbox__input {
+.checkbox__input
+{
   display: none;
 }
 
 .checkbox__input[type='checkbox']:checked + .checkbox__label::before
 {
-  background-image: svg('check', '[fill]: var(--mainBlack)');
+  background-image: svg-load(check.svg, fill: #222);
 }
