--- a/app/blocks/home/home.css
+++ b/app/blocks/home/home.css
@@ -18,21 +18,17 @@
   lost-column: 1/2 0 0;
 
   flex-direction: column;
-  border: 1px solid blue;
 }
 
-.home__lion
+.home__image
 {
   lost-column: 1/2 0 0;
 
   justify-content: flex-end;
-  border: 1px solid red;
+  align-items: flex-start;
 }
 
-.lion
+.home__image img
 {
-  /*width: 81.25%;*/
-  width: 300px;
-  border: 1px solid green;
-  fill: pink;
+  width: 81.25%;
 }
