--- a/app/blocks/logo/logo.jade
+++ b/app/blocks/logo/logo.jade
@@ -2,5 +2,5 @@ include ../icon/icon
 
 mixin logo()
   +b.logo&attributes(attributes)
-    +icon('logoFront').logo__icon.logo__icon--front
-    +icon('logoBack').logo__icon.logo__icon--back
+    +e.inner Driven
+    +icon('logo').logo__icon
