--- a/app/blocks/icon/icon.jade
+++ b/app/blocks/icon/icon.jade
@@ -1,3 +1,3 @@
 mixin icon(iconName, w, h)
-  +b.SVG(viewBox="0 0 #{w ? w : 1} #{h ? h : 1}")&attributes(attributes)
+  +b.SVG(viewBox="0 0 #{w ? w : 1} #{h ? h : 1}" preserveAspectRatio="xMidYMid meet")&attributes(attributes)
     use(xlink:href='#icon-#{iconName}')
