--- a/app/blocks/portfolio/portfolio.css
+++ b/app/blocks/portfolio/portfolio.css
@@ -8,17 +8,41 @@
 
 .portfolio__item
 {
-  lost-column: 1/2 2;
+  lost-column: 1/1;
 
   position: relative;
   overflow: hidden;
+  height: 100vw;
   cursor: pointer;
-  outline: 2px solid pink;
+}
+
+.portfolio__item:nth-child(even) .portfolio__description h3,
+.portfolio__item:nth-child(even) .portfolio__description p
+{
+  color: var(--gold);
+  background-color: color(var(--gradient1) alpha(65%));
+  text-shadow: .125rem .125rem 0 #00000980; /* 2/16, 2/16 */
+}
+
+.portfolio__item:nth-child(odd) .portfolio__description h3,
+.portfolio__item:nth-child(odd) .portfolio__description p
+{
+  color: var(--mainBlack);
+  background-color: color(var(--gradient2) alpha(65%));
+  text-shadow: .125rem .125rem 0 #fffff980; /* 2/16, 2/16 */
 }
 
 .portfolio__image
 {
+  width: 100%;
+  height: 100%;
   transition: transform 4s linear;
+}
+
+.portfolio__image img
+{
+  width: 100%;
+  height: 100%;
 }
 
 .portfolio__description
@@ -66,30 +90,19 @@
 {
   .portfolio__item
   {
-    lost-column: 1/3 3;
-  }
+    lost-column: 1/2;
 
-  .portfolio__item:nth-child(even) .portfolio__description h3,
-  .portfolio__item:nth-child(even) .portfolio__description p
-  {
-    color: var(--gold);
-    background-color: color(var(--gradient1) alpha(65%));
-    text-shadow: .125rem .125rem 0 #00000980; /* 2/16, 2/16 */
-  }
-
-  .portfolio__item:nth-child(odd) .portfolio__description h3,
-  .portfolio__item:nth-child(odd) .portfolio__description p
-  {
-    color: var(--mainBlack);
-    background-color: color(var(--gradient2) alpha(65%));
-    text-shadow: .125rem .125rem 0 #fffff980; /* 2/16, 2/16 */
+    height: 50vw;
   }
 }
 
-@media (--xl)
+@media (--l)
 {
   .portfolio__item
   {
-    lost-column: 1/3 3;
+    lost-column: 1/3;
+
+    height: 33.33333333333333vw;
+    max-height: 30rem; /* 480/16 */
   }
 }
