--- a/app/blocks/index/index.jade
+++ b/app/blocks/index/index.jade
@@ -28,7 +28,8 @@ mixin index()
       +section()#about
         +about()
           +e.avatar
-            +e.wrap
+            +e.icon
+              +e.CANVAS.canvas
               +icon('avatar').avatar
             +social(getData('social'))
           +e.info
