--- a/app/blocks/about/about.css
+++ b/app/blocks/about/about.css
@@ -10,7 +10,6 @@
 
   flex-direction: column;
   align-items: center;
-  background-color: pink;
 }
 
 .about__info
@@ -19,7 +18,6 @@
 
   flex-direction: column;
   align-items: center;
-  background-color: palegreen;
 }
 
 .about__skills
@@ -30,25 +28,32 @@
   padding: 0 6.0790625%;
 }
 
-.about__wrap
+.about__icon
 {
   position: relative;
+  display: block;
   width: 100%;
-  height: 0;
-  padding: 0;
-  padding-bottom: 100%;
+  height: 30vw;
+  margin-bottom: var(--vr);
+}
+
+.about__canvas
+{
+  display: block;
+  visibility: hidden;
+  height: 100%;
 }
 
 .avatar
 {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 50%;
   height: 100%;
-  /*height: auto;*/
-  /*margin-top: 1.414em;*/
-  background-color: tomato;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 1.414em;
+  transform: translateX(-50%);
 }
 
 @media (--s)
