--- a/app/blocks/triangle/triangle.css
+++ b/app/blocks/triangle/triangle.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 0;
   height: 0;
-  border-width: 74px 0 0 0;
+  border-width: 4.625rem 0 0 0; /* 74/16 */
   border-style: solid;
 }
 
@@ -13,7 +13,6 @@
   top: 0;
   border-color: white transparent transparent transparent;
 }
-
 
 .triangle__bottom
 {
