--- a/app/blocks/form/form.jade
+++ b/app/blocks/form/form.jade
@@ -10,4 +10,4 @@ mixin form()
           +e('textarea')(id='inputMessage', name='message', maxlength='1000', required).textarea
           +e('label')(for='inputMessage').label Message
       input(type="hidden", name="_next", value="")
-      +e('button')(type="submit" value='Submit').btn
+      +e('button')(type="submit").btn Submit
