--- a/app/blocks/gallery/gallery.css
+++ b/app/blocks/gallery/gallery.css
@@ -1,36 +1,69 @@
 .gallery
 {
-  flex-wrap: wrap;
+  flex-direction: column;
   width: 100%;
+  height: auto;
+}
+
+.gallery__col
+{
+  flex-direction: column;
+  width: 100%;
+}
+
+.gallery__col:nth-child(odd) .gallery__item:nth-child(odd) .gallery__description h3,
+.gallery__col:nth-child(odd) .gallery__item:nth-child(odd) .gallery__description p
+{
+  color: var(--mainBlack);
+  background-color: color(var(--gradient2) alpha(65%));
+  text-shadow: .125rem .125rem 0 #fffff980;
+}
+
+.gallery__col:nth-child(odd) .gallery__item:nth-child(even) .gallery__description h3,
+.gallery__col:nth-child(odd) .gallery__item:nth-child(even) .gallery__description p
+{
+  color: var(--gold);
+  background-color: color(var(--gradient1) alpha(65%));
+  text-shadow: .125rem .125rem 0 #00000980;
+}
+
+.gallery__col:nth-child(even) .gallery__item:nth-child(odd) .gallery__description h3,
+.gallery__col:nth-child(even) .gallery__item:nth-child(odd) .gallery__description p
+{
+  color: var(--gold);
+  background-color: color(var(--gradient1) alpha(65%));
+  text-shadow: .125rem .125rem 0 #00000980;
+}
+
+.gallery__col:nth-child(even) .gallery__item:nth-child(even) .gallery__description h3,
+.gallery__col:nth-child(even) .gallery__item:nth-child(even) .gallery__description p
+{
+  color: var(--mainBlack);
+  background-color: color(var(--gradient2) alpha(65%));
+  text-shadow: .125rem .125rem 0 #fffff980;
 }
 
 .gallery__item
 {
-  lost-column: 1/1;
-
   position: relative;
+  display: block;
   overflow: hidden;
+  width: 100%;
   cursor: pointer;
 }
 
-.gallery__item:nth-child(even) .gallery__description h3,
-.gallery__item:nth-child(even) .gallery__description p
+.gallery__item::after
 {
-  color: var(--gold);
-  background-color: color(var(--gradient1) alpha(65%));
-  text-shadow: .125rem .125rem 0 #00000980; /* 2/16, 2/16 */
-}
-
-.gallery__item:nth-child(odd) .gallery__description h3,
-.gallery__item:nth-child(odd) .gallery__description p
-{
-  color: var(--mainBlack);
-  background-color: color(var(--gradient2) alpha(65%));
-  text-shadow: .125rem .125rem 0 #fffff980; /* 2/16, 2/16 */
+  display: block;
+  padding-bottom: 100%;
+  content: '';
 }
 
 .gallery__image
 {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   transition: transform 4s linear;
@@ -63,20 +96,18 @@
   width: 100%;
   height: 100%;
   margin: 0;
-  padding-right: .625rem; /* 10/16 */
-  padding-left: .625rem; /* 10/16 */
+  padding-right: .625rem;
+  padding-left: .625rem;
   transition: all .5s ease;
   text-align: center;
-  color: var(--gold);
-  background-color: color(#000 alpha(65%));
 }
 
 .gallery__description h3
 {
   align-items: flex-end;
   padding-bottom: .3em;
-  font-weight: bold;
   font-size: 2rem;
+  font-weight: bold;
 }
 
 .gallery__description p
@@ -87,21 +118,27 @@
 
 @media (--m)
 {
-  .gallery__item
+  .gallery
   {
-    lost-column: 1/2;
+    flex-direction: row;
+  }
 
-    height: 50vw;
+  .gallery__col
+  {
+    width: 50%;
   }
 }
 
 @media (--l)
 {
-  .gallery__item
+  .gallery
   {
-    lost-column: 1/3;
+    flex-direction: column;
+  }
 
-    height: 33.33333333333333vw;
-    max-height: 30rem; /* 480/16 */
+  .gallery__col
+  {
+    flex-direction: row;
+    width: 100%;
   }
 }
